# foghorn

./: .clippy.toml  .gitattributes  .gitignore  Cargo.toml  justfile
.github/workflows/: mirror.yml  rust.yml
migrations/: 20251103111440_init.sql
src/: app.rs  avatar.rs  backoff.rs  dialog.rs  icons.rs  image.rs  log.rs  main.rs  manager_manager.rs  message.rs  parse.rs  widget.rs
src/message/: view.rs
src/widget/: text.rs  vsplit.rs
src/widget/text/: rich.rs  span.rs
widget/: Cargo.toml
widget/src/: lib.rs  text.rs
widget/src/text/: rich.rs  span.rs
widget/src/text/rich/: selection.rs
