[package]
name = "foghorn"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
foghorn_widgets = { path = "widget" }
iced = { version = "0.14.0-dev", features = [
  "image",
  "qr_code",
  "tokio",
  "advanced",
] }
iced_dialog = { git = "https://git.sr.ht/~pml68/iced_dialog", branch = "master" }
iced_split = { git = "https://github.com/edwloef/iced_split", branch = "main" }
jiff = "0.2.15"
mime = "0.3.17"
notify-rust = "4.11.7"
presage = { git = "https://github.com/whisperfish/presage", rev = "58300b9" }
presage-store-sled = { git = "https://github.com/whisperfish/presage", rev = "58300b9" }
tokio = "1.48.0"
tracing.workspace = true
tracing-subscriber = { version = "0.3.20", features = ["json"] }

[lints]
workspace = true

[workspace]
members = ["widget"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "AGPL-3.0-only"
rust-version = "1.88.0"

[workspace.dependencies]
iced_widget = "0.14.0-dev"
tracing = "0.1.41"
unicode-segmentation = "1.12.0"
uuid = "1"
iced_selection = { git = "https://git.sr.ht/~pml68/iced_selection", branch = "master" }

[patch.crates-io]
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }
iced = { git = "https://github.com/iced-rs/iced", branch = "master" }
iced_core = { git = "https://github.com/iced-rs/iced", branch = "master" }
iced_widget = { git = "https://github.com/iced-rs/iced", branch = "master" }

[workspace.lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
rust_2018_idioms = "warn"
unused_crate_dependencies = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
float_cmp = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
type_complexity = "allow"

missing_errors_doc = "allow"
missing_panics_doc = "allow"

nursery = { level = "warn", priority = -1 }
cognitive_complexity = "allow"
future_not_send = "allow"
large_futures = "allow"
large_stack_frames = "allow"
missing_const_for_fn = "allow"

allow_attributes = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
get_unwrap = "warn"
iter_over_hash_type = "warn"
if_then_some_else_none = "warn"
lossy_float_literal = "warn"
pub_without_shorthand = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
semicolon_inside_block = "warn"
separated_literal_suffix = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
try_err = "warn"
unused_trait_names = "warn"

dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"

multiple_unsafe_ops_per_block = "deny"
undocumented_unsafe_blocks = "deny"

[profile.release]
lto = true
codegen-units = 1
