[package]
name = "foghorn_widgets"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
iced_widget.workspace = true
iced_selection.workspace = true
unicode-segmentation.workspace = true
uuid.workspace = true

tracing.workspace = true
tracing.features = ["log"]
